--- a/petlja_sphinx_extensions/extensions/notes/css/notes.css
+++ b/petlja_sphinx_extensions/extensions/notes/css/notes.css
@@ -1,21 +1,3 @@
-.rst-level{
-    padding-left: 17px;
-    margin-left: -17px;
-    border-left: 2px solid;
-}
-
-.rst-level-1{
-    border-left-color: #18BC9C;
-}
-
-.rst-level-2{
-    border-left-color: #FBC02D;
-}
-
-.rst-level-3{
-    border-left-color: #e74c3c;
-}
-
 .note-wrapper {
     position: relative;
     display: block;
@@ -68,12 +50,12 @@
 }
 
     .learnmorenote-type .course-content p:nth-of-type(1)::after {
-        font-family: "Font Awesome 5 Free";
-        content: "\f107";
-        display: inline-block;
-        padding-right: 3px;
-        vertical-align: middle;
-        font-weight: 900;
+        content: '';
+        border: solid black;
+        border-width: 0 3px 3px 0;
+        padding: 3px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
         float: right;
     }
 
@@ -82,12 +64,12 @@
 }
 
 .learnmorenote-type .course-content p:nth-of-type(1)::before {
-    font-family: "Font Awesome 5 Free";
-    content: "\f106";
-    display: inline-block;
-    padding-right: 3px;
-    vertical-align: middle;
-    font-weight: 900;
+    content: '';
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    padding: 3px;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
     float: right;
     display: none;
 }
