--- a/petlja_sphinx_extensions/extensions/notes/css/notes.css
+++ b/petlja_sphinx_extensions/extensions/notes/css/notes.css
@@ -49,7 +49,7 @@
     cursor: pointer;
 }
 
-    .learnmorenote-type .course-content p:nth-of-type(1)::after {
+.learnmorenote-type .course-content > p:first-child::after{
         content: '';
         border: solid black;
         border-width: 0 3px 3px 0;
